--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ dependencies = [
     "annotated-types (==0.7.0)",
     "anyio (==4.8.0)",
     "pydantic-core (==2.27.2)",
-    "pydantic (==2.10.6)"
+    "pydantic (==2.10.6)",
+    "response (>=0.5.0,<0.6.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
