refactoring/use-asyncio

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:password@0.0.0.0:5432/pomodoro
+sqlalchemy.url = postgresql+asyncpg://postgres:password@0.0.0.0:5432/pomodoro
 
 
 [post_write_hooks]
