--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,10 @@ dependencies = [
     "pydantic-core (==2.27.2)",
     "pydantic (==2.10.6)",
     "response (>=0.5.0,<0.6.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "greenlet (>=3.1.1,<4.0.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
