--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,19 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "greenlet (>=3.1.1,<4.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-twisted (>=1.14.3,<2.0.0)",
+    "pytest-async (>=0.1.1,<0.2.0)",
+    "twisted (>=24.11.0,<25.0.0)",
+    "pytest-factoryboy (>=2.7.0,<3.0.0)",
+    "faker (>=37.0.2,<38.0.0)",
+    "pytest-asyncio (>=0.26.0,<0.27.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
