--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,9 @@ dependencies = [
     "twisted (>=24.11.0,<25.0.0)",
     "pytest-factoryboy (>=2.7.0,<3.0.0)",
     "faker (>=37.0.2,<38.0.0)",
-    "pytest-asyncio (>=0.26.0,<0.27.0)"
+    "pytest-asyncio (>=0.26.0,<0.27.0)",
+    "celery (>=5.4.0,<6.0.0)",
+    "flower (>=2.0.1,<3.0.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
