--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Anton Fayfer",email = "fayfer2004@mail.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "black (>=25.1.0,<26.0.0)",
@@ -47,7 +47,9 @@ dependencies = [
     "faker (>=37.0.2,<38.0.0)",
     "pytest-asyncio (>=0.26.0,<0.27.0)",
     "celery (>=5.4.0,<6.0.0)",
-    "flower (>=2.0.1,<3.0.0)"
+    "flower (>=2.0.1,<3.0.0)",
+    "aio-pika (>=9.5.5,<10.0.0)",
+    "aiokafka (>=0.12.0,<0.13.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
