--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.9'
 
 services:
+  app:
+    build: .
 
   db:
     image: postgres:16.3-alpine
@@ -26,39 +28,39 @@ services:
       - "15672:15672"
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.4.10-1-ubi8
-    restart: always
-    environment:
-      ZOOKEEPER_SERVER_ID: 1
-      ZOOKEEPER_CLIENT_PORT: "2181"
-      ZOOKEEPER_SERVERS: "zookeeper:22888:23888"
+    image: bitnami/zookeeper:latest
+    hostname: zoo1
+    container_name: zoo1
     ports:
       - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zoo1:2888:3888
 
   kafka:
-    image: confluentinc/cp-kafka:7.2.2
+    image: bitnami/kafka:latest
+    hostname: kafka1
+    container_name: kafka1
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    environment:
+      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CFG_LISTENERS: INTERNAL://:19092,EXTERNAL://:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka:19092,EXTERNAL://localhost:9092
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
+      ALLOW_PLAINTEXT_LISTENER: "yes"
     depends_on:
       - zookeeper
-    ports:
-      # Exposes 29092 for external connections to the broker
-      # Use kafka1:9092 for connections internal on the docker network
-      # See https://rmoff.net/2018/08/02/kafka-listeners-explained/ for details
-      - "19092:19092"
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:19092
-      KAFKA_BROKER_ID: 1
-      KAFKA_DELETE_TOPIC_ENABLE: "true"
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_SCHEMA_REGISTRY_URL: "schemaregistry:8085"
-      KAFKA_LOG4J_ROOT_LOGLEVEL: INFO
-      KAFKA_JMX_PORT: 9991
 
   schemaregistry:
-    image: confluentinc/cp-schema-registry:5.4.10
+    image: confluentinc/cp-schema-registry:latest
     restart: always
     depends_on:
       - zookeeper
+      - kafka
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: "zookeeper:2181"
       SCHEMA_REGISTRY_HOST_NAME: schemaregistry
@@ -67,12 +69,18 @@ services:
       - 18085:8085
 
   kafdrop:
-    image: obsidiandynamics/kafdrop:3.31.0-SNAPSHOT
+    image: obsidiandynamics/kafdrop:latest
     depends_on:
       - kafka
       - schemaregistry
     ports:
       - 19000:9000
     environment:
-      KAFKA_BROKERCONNECT: kafka:9092
+      KAFKA_BROKERCONNECT: kafka:19092
       CMD_ARGS: "--message.format=AVRO --message.keyFormat=DEFAULT --schemaregistry.connect=http://schemaregistry:8085"
+
+volumes:
+  zookeeper_data:
+    driver: local
+  kafka_data:
+    driver: local
