--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,12 @@ dependencies = [
     "celery (>=5.4.0,<6.0.0)",
     "flower (>=2.0.1,<3.0.0)",
     "aio-pika (>=9.5.5,<10.0.0)",
-    "aiokafka (>=0.12.0,<0.13.0)"
+    "aiokafka (>=0.12.0,<0.13.0)",
+    "ruff (>=0.11.5,<0.12.0)"
 ]
+
+
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
