--- a/workflows/.github.ci.yml
+++ b/workflows/.github.ci.yml
@@ -11,4 +11,26 @@ jobs:
   lint:
     runs-on:ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Install Dependencies
+    run:
+        |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
+    - name: Black
+    run: poetry run black .
+    - name: Ruff
+    run: ruff check app
+
+
+  unit-test:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Install dependencies
+    run:
+      |
+      python -m pip install --upgrade pip
+      pip install poetry
+      poetry install
+    - name: Run unittest
+    run: poetry run pytest tests/unit
