--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,8 @@ dependencies = [
     "flower (>=2.0.1,<3.0.0)",
     "aio-pika (>=9.5.5,<10.0.0)",
     "aiokafka (>=0.12.0,<0.13.0)",
-    "ruff (>=0.11.5,<0.12.0)"
+    "ruff (>=0.11.5,<0.12.0)",
+    "sentry-sdk[fastapi] (>=2.25.1,<3.0.0)"
 ]
 
 
