--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Ruff
         run: poetry run ruff check app
 
+
   unit-test:
     runs-on: ubuntu-latest
     strategy:
@@ -49,24 +50,24 @@ jobs:
       - name: Run Unit Tests
         run: poetry run pytest tests/unit
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   environment: pomodoro
+  deploy:
+    runs-on: ubuntu-latest
+    environment: pomodoro
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up SSH
-  #       uses: webfactory/ssh-agent@v0.9.0
-  #       with:
-  #         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-  #     - name: Deploy to server via SSH
-  #       run: |
-  #         ssh -o StrictHostKeyChecking=no root@91.186.198.243 "
-  #           cd Pomodoro &&
-  #           git pull &&
-  #           docker-compose down &&
-  #           docker-compose up -d
-  #         "
+      - name: Deploy to server via SSH
+        run: |
+          ssh -o StrictHostKeyChecking=no root@91.186.198.243 "
+            cd Pomodoro &&
+            git pull &&
+            docker-compose down &&
+            docker-compose up -d
+          "
