--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -11,46 +11,71 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.12" ]
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run:
-            |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
-      - name: Black
-        run: poetry run black app
-      - name: Ruff
-        run: poetry run ruff check app
 
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip --no-cache-dir
+          pip install poetry
+          poetry config virtualenvs.create false
+          poetry install
+
+      - name: Lint with Black
+        run: poetry run black app
+
+      - name: Lint with Ruff
+        run: poetry run ruff check app
 
   unit-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.12" ]
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run:
-            |
-          python -m pip install --upgrade pip
+
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip --no-cache-dir
           pip install poetry
+          poetry config virtualenvs.create false
           poetry install
-      - name: Run Unit Tests
+
+      - name: Run unit tests
         run: poetry run pytest tests/unit
 
+  # DEPLOY (можно отключить/удалить)
   deploy:
+    if: ${{ false }}
+    needs: [lint, unit-test]
     runs-on: ubuntu-latest
     environment: pomodoro
 
