--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -33,7 +33,7 @@ jobs:
           python -m pip install --upgrade pip --no-cache-dir
           pip install poetry
           poetry config virtualenvs.create false
-          poetry install
+          poetry install --no-root
 
       - name: Lint with Black
         run: poetry run black app
