--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -67,7 +67,7 @@ jobs:
           python -m pip install --upgrade pip --no-cache-dir
           pip install poetry
           poetry config virtualenvs.create false
-          poetry install
+          poetry install --no-root
 
       - name: Run unit tests
         run: poetry run pytest tests/unit
