--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -51,8 +51,8 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: pomodoro
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
         ports:
           - 5432:5432
         options: >-
@@ -82,16 +82,18 @@ jobs:
           pip install poetry
           poetry config virtualenvs.create false
           poetry install --no-root
-
+      - name: Run docker-compose services
+        run: docker-compose up -d
       - name: Run unit tests
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: pomodoro
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
         run: poetry run pytest tests/unit
 
+  # DEPLOY (можно отключить/удалить)
   deploy:
     if: ${{ false }}
     needs: [lint, unit-test]
@@ -105,7 +107,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.GITHUB_TOKEN }}
+          ssh-private-key: ${{ secrets.git }}
 
       - name: Deploy to server via SSH
         run: |
