--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -85,7 +85,7 @@ jobs:
         run: poetry run pytest tests/unit
 
   deploy:
-    if: ${{ false }}
+    if: ${{ true }} 
     needs: [lint, unit-test]
     runs-on: ubuntu-latest
     environment: pomodoro
@@ -97,7 +97,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_KEY_ONE_SECRET }}
+          ssh-private-key: ${{ secrets.SSH_SECREY_KEY }}
 
       - name: Deploy to server via SSH
         run: |
