--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -83,27 +83,36 @@ jobs:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
         run: poetry run pytest tests/unit
-
+        
   deploy:
-    if: ${{ true }} 
-    needs: [lint, unit-test]
     runs-on: ubuntu-latest
-    environment: pomodoro
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.9.0
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          python-version: '3.10'
 
-      - name: Deploy to server via SSH
+      - name: Install dependencies
         run: |
-          ssh -o StrictHostKeyChecking=no root@91.186.198.243 "
-            cd Pomodoro &&
-            git pull &&
-            docker compose down &&
-            docker compose up -d
-          "
+          pip install -r requirements.txt
+
+      - name: Run server
+        run: |
+          nohup uvicorn main:app --host 0.0.0.0 --port 8000 &
+
+      - name: Download and start ngrok
+        run: |
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt update && sudo apt install ngrok
+          ngrok config add-authtoken ${{ secrets.NGROK_TOKEN }}
+          nohup ngrok http 8000 & sleep 5
+          curl 127.0.0.1:4040/api/tunnels > tunnels.json
+
+      - name: Show public URL
+        run: |
+          cat tunnels.json
