--- a/.github/workflows/.github.ci.yml
+++ b/.github/workflows/.github.ci.yml
@@ -83,33 +83,23 @@ jobs:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
         run: poetry run pytest tests/unit
-        
+
   deploy:
+    if: ${{ true }} 
+    needs: [lint, unit-test]
     runs-on: ubuntu-latest
+    environment: pomodoro
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Run server
-        run: |
-          nohup uvicorn main:app --host 0.0.0.0 --port 8000 &
+        uses: actions/checkout@v4
 
       - name: Download and start ngrok
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok
-          ngrok config add-authtoken ${{ secrets.NGROK_TOKEN }}
+          ngrok config add-authtoken ${{ secrets.NGROK_SECRET_KEY }}
           nohup ngrok http 8000 & sleep 5
           curl 127.0.0.1:4040/api/tunnels > tunnels.json
 
